// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > renders with ariaLabel correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="-1" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative" aria-label="Aria label">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with as correctly 1`] = `
"<section role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</section>"
`;

exports[`RadioGroup > renders with b24ui correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full ms-4">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full ms-4">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full ms-4">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with class correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="absolute">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with defaultValue correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with description correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <p class="text-base-500 dark:text-base-600">Description 0</p>
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <p class="text-base-500 dark:text-base-600">Description 1</p>
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <p class="text-base-500 dark:text-base-600">Description 2</p>
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with description slot correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Description slot</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Description slot</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Description slot</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with descriptionKey correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <p class="text-base-500 dark:text-base-600">1</p>
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <p class="text-base-500 dark:text-base-600">2</p>
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <p class="text-base-500 dark:text-base-600">3</p>
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with disabled correctly 1`] = `
"<div role="radiogroup" data-disabled="" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="-1" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4 cursor-not-allowed opacity-75" tabindex="-1" data-orientation="vertical" data-disabled="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="block text-base-master dark:text-base-400 leading-5 cursor-not-allowed opacity-75" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4 cursor-not-allowed opacity-75" tabindex="-1" data-orientation="vertical" data-disabled="" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="block text-base-master dark:text-base-400 leading-5 cursor-not-allowed opacity-75" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4 cursor-not-allowed opacity-75" tabindex="-1" data-orientation="vertical" data-disabled="" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" disabled="" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="block text-base-master dark:text-base-400 leading-5 cursor-not-allowed opacity-75" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with horizontal variant card correctly 1`] = `
"<div role="radiogroup" aria-orientation="horizontal" aria-required="false" dir="ltr" tabindex="0" data-orientation="horizontal" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-row gap-1">
    <!--v-if--><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full me-2">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full me-2">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full me-2">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with horizontal variant list correctly 1`] = `
"<div role="radiogroup" aria-orientation="horizontal" aria-required="false" dir="ltr" tabindex="0" data-orientation="horizontal" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-row gap-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full me-2"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full me-2"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full me-2"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with horizontal variant table correctly 1`] = `
"<div role="radiogroup" aria-orientation="horizontal" aria-required="false" dir="ltr" tabindex="0" data-orientation="horizontal" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-row gap-0 -space-x-px">
    <!--v-if--><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-l-lg last-of-type:rounded-r-lg has-data-[state=checked]:bg-blue-500/24 dark:has-data-[state=checked]:bg-blue-600/24 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full me-2">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-l-lg last-of-type:rounded-r-lg has-data-[state=checked]:bg-blue-500/24 dark:has-data-[state=checked]:bg-blue-600/24 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full me-2">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-l-lg last-of-type:rounded-r-lg has-data-[state=checked]:bg-blue-500/24 dark:has-data-[state=checked]:bg-blue-600/24 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="horizontal" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full me-2">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with indicator end correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row-reverse text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 ms-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row-reverse text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 ms-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row-reverse text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 ms-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with indicator hidden correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 sr-only size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full text-center">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 sr-only size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full text-center">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 sr-only size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full text-center">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with indicator start correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with items correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with label slot correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Label slot</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Label slot</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Label slot</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with labelKey correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with legend slot correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Legend slot</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Legend slot</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Legend slot</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with modelValue correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with primary variant card correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with primary variant list correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with primary variant table correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-0 -space-y-px">
    <!--v-if--><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-blue-500/24 dark:has-data-[state=checked]:bg-blue-600/24 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-blue-500 dark:bg-blue-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-blue-500/24 dark:has-data-[state=checked]:bg-blue-600/24 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-blue-500/24 dark:has-data-[state=checked]:bg-blue-600/24 has-data-[state=checked]:border-blue-500 dark:has-data-[state=checked]:border-blue-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with required correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="true" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <legend class="mb-1.5 block text-base-900 dark:text-base-400 text-sm">Legend</legend><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="true" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5 after:content-['*'] after:ms-0.5 after:text-red-500 dark:after:text-red-600" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size lg correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1.5">
    <!--v-if--><label class="flex items-start flex-row text-xl">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-5" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xl">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-5" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xl">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-5" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size md correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size sm correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1.5">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-3.5" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-4" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-3.5" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-4" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-3.5" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-4" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with size xs correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-3" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="1" aria-label="1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-4" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-3" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-4" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-3" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-4" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with success variant card correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-green-500 dark:has-data-[state=checked]:border-green-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-green-500 dark:bg-green-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-green-500 dark:has-data-[state=checked]:border-green-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-base-200 dark:border-base-700 rounded-lg flex-row text-md p-3.5 has-data-[state=checked]:border-green-500 dark:has-data-[state=checked]:border-green-600">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with success variant list correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-green-500 dark:bg-green-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full"><label for="v-0-0:1" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full"><label for="v-0-0:2" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full"><label for="v-0-0:3" class="cursor-pointer block text-base-master dark:text-base-400 leading-5">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with success variant table correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-0 -space-y-px">
    <!--v-if--><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-green-500/24 dark:has-data-[state=checked]:bg-green-600/24 has-data-[state=checked]:border-green-500 dark:has-data-[state=checked]:border-green-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-active="" data-reka-collection-item="" id="v-0-0:1" role="radio" type="button" aria-checked="true" data-state="checked" required="false" value="1" aria-label="1"><span data-state="checked" class="flex items-center justify-center size-full rounded-full after:bg-white dark:after:bg-base-dark after:rounded-full bg-green-500 dark:bg-green-600 after:size-1.5"></span>
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-green-500/24 dark:has-data-[state=checked]:bg-green-600/24 has-data-[state=checked]:border-green-500 dark:has-data-[state=checked]:border-green-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="2" aria-label="2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-base-200 dark:border-base-900 flex-row text-md p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-green-500/24 dark:has-data-[state=checked]:bg-green-600/24 has-data-[state=checked]:border-green-500 dark:has-data-[state=checked]:border-green-600 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-500 dark:focus-visible:outline-green-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="3" aria-label="3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`RadioGroup > renders with valueKey correctly 1`] = `
"<div role="radiogroup" aria-orientation="vertical" aria-required="false" dir="ltr" tabindex="0" data-orientation="vertical" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="relative">
  <fieldset class="flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:Option 1" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="Option 1" aria-label="Option 1">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:Option 1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:Option 2" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="Option 2" aria-label="Option 2">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:Option 2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-md">
      <div class="flex items-center h-5"><button class="cursor-pointer rounded-full ring ring-inset ring-base-300 dark:ring-base-700 outline-transparent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-500 dark:focus-visible:outline-blue-600 me-2 size-4" tabindex="-1" data-orientation="vertical" data-reka-collection-item="" id="v-0-0:Option 3" role="radio" type="button" aria-checked="false" data-state="unchecked" required="false" value="Option 3" aria-label="Option 3">
          <!---->
          <!---->
        </button></div>
      <div class="font-regular w-full">
        <p class="cursor-pointer block text-base-master dark:text-base-400 leading-5" for="v-0-0:Option 3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;
